--- a/style.css
+++ b/style.css
@@ -128,13 +128,16 @@ main {
 }
 
 .btn--new {
-  top: 2rem;
+  top: 8rem;
 }
 .btn--roll {
   top: 45rem;
 }
 .btn--hold {
   top: 52rem;
+}
+.btn--spell {
+  top: 2rem;
 }
 
 .btn:active {
@@ -176,4 +179,48 @@ main {
 
 .hidden {
   display: none;
+}
+
+.about {
+  position: absolute;
+  left: 5%;
+  top: 3rem;
+  color: #ddd;
+  cursor: pointer;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(3px);
+  z-index: 5;
+}
+
+.modal-about {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 70%;
+
+  background-color: white;
+  padding: 6rem;
+  border-radius: 5px;
+  box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
+  z-index: 10;
+}
+
+.close-modal {
+  position: absolute;
+  top: 1.2rem;
+  right: 2rem;
+  font-size: 5rem;
+  color: #333;
+  cursor: pointer;
+  border: none;
+  background: none;
 }
