--- a/style.css
+++ b/style.css
@@ -145,6 +145,12 @@ main {
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
 }
 
+.btn:disabled {
+  border: 1px solid #999999;
+  background-color: #cccccc;
+  color: #666666;
+}
+
 .btn:focus {
   outline: none;
 }
