Finished programming all modals.

--- a/style.css
+++ b/style.css
@@ -248,6 +248,9 @@ main {
   border-radius: 5px;
   box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
   z-index: 10;
+
+  max-height: calc(100vh - 210px);
+  overflow-y: auto;
 }
 
 .close-modal {
