--- a/style.css
+++ b/style.css
@@ -182,7 +182,11 @@ main {
 } */
 
 .player--winner {
-  background-color: #2f2f2f;
+  background-color: #5c5cda;
+}
+
+.player--loser {
+  background-color: #f11212bc;
 }
 
 .player--winner .name {
@@ -336,4 +340,29 @@ main {
 
 .total-score-label {
   font-size: 3rem;
+}
+
+@keyframes rise {
+  from {
+    transform: translateY(75%) scale(1);
+  }
+  to {
+    transform: translateY(-10%) scale(2);
+  }
+}
+
+.rounds-animation {
+  font-family: "Rockwell";
+  font-size: 46px;
+  text-align: center;
+  margin-top: -10%;
+  /* opacity: 0; */
+  color: white;
+  -webkit-text-stroke: 2px black;
+  animation: rise 3s forwards;
+  position: fixed;
+  top: 50%;
+  left: 40%;
+  transform: translate(-50%, -50%);
+  z-index: 999;
 }
