--- a/style.css
+++ b/style.css
@@ -416,3 +416,36 @@ main {
   transform: translate(-50%, -50%);
   z-index: 999;
 }
+
+/* Experimenting */
+.custom-alert {
+  display: none;
+  position: fixed;
+  z-index: 9999;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.custom-alert-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  padding: 20px;
+  text-align: center;
+  font-size: 2rem;
+  margin-bottom: 50px;
+}
+
+.custom-alert-close {
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  margin-top: 50px;
+}
