Slowly working on appearance.

--- a/style.css
+++ b/style.css
@@ -10,16 +10,28 @@
   --color-purple: #9530ab;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   font-family: "Rockwell";
   background: var(--color-dark-gray);
 }
 
 nav {
-  position: relative;
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  align-items: center;
   width: 100%;
+}
+
+.left,
+.right {
+  display: flex;
+  justify-content: center;
 }
 
 .top-bar {
@@ -30,8 +42,8 @@ nav {
 }
 
 .tengu-img {
+  grid-column: 2;
   height: 100px;
-  justify-self: center;
 }
 
 .hamburger-button {
@@ -44,7 +56,7 @@ nav {
   display: none;
 }
 
-@media screen and (max-width: 1090px) {
+@media screen and (max-width: 1150px) {
   nav {
     justify-content: center;
   }
@@ -60,15 +72,81 @@ nav {
 
 main {
   position: relative;
-  width: 50%;
-  height: 70%;
-  background-color: rgba(255, 255, 255, 0.35);
+  /* background-color: rgba(255, 255, 255, 0.35); */
   backdrop-filter: blur(200px);
   filter: blur();
   box-shadow: 0.5em 1em 2em rgba(0, 0, 0, 0.25);
   border-radius: 0.5em;
   overflow: hidden;
   display: flex;
+  justify-content: center;
+  margin: 100px auto;
+}
+
+.play-area {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap; /* Allows items to wrap to the next line on smaller screens */
+  width: 100%;
+  /* background-color: lightgray; */
+}
+
+.player-area {
+  width: 325px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #ccc;
+  border-radius: 15%;
+}
+
+.card-area {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  width: 325px;
+}
+
+.play-card {
+  width: 325px;
+  margin: auto;
+}
+
+/* CSS for larger screens */
+@media (min-width: 1024px) {
+  .play-area {
+    flex-direction: row; /* Horizontally align the player areas and card area */
+  }
+}
+
+/* CSS for smaller screens */
+@media (max-width: 1023px) {
+  .play-area {
+    flex-direction: column; /* Vertically align the player areas and card area */
+  }
+  .active-player-area {
+    width: 100%;
+    border-top-left-radius: 100%;
+    border-top-right-radius: 100%;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+    height: 150px;
+  }
+  /* For the waiting player, flip the hemisphere to the bottom */
+  .waiting-player-area {
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    border-bottom-left-radius: 50%;
+    border-bottom-right-radius: 50%;
+    height: 150px;
+  }
+}
+
+.active-p-score {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
 }
 
 .player {
@@ -223,16 +301,6 @@ main {
   outline: none;
 }
 
-.card {
-  position: absolute;
-  left: 50%;
-  top: 8.5rem;
-  transform: translateX(-50%);
-  height: 55%;
-  box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.2);
-  border-radius: 25px;
-}
-
 /* .dice {  // This will be the code I use later for programming dice rolls to see who goes first
   position: absolute;
   left: 50%;
@@ -260,9 +328,6 @@ main {
 }
 
 .copyright {
-  position: absolute;
-  bottom: 0.5rem;
-  right: 5%;
   color: #ddd;
   font-size: 1rem;
 }
